adds padding to h1 and h3 of contact page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -447,6 +447,10 @@ ul.dropdown-menu{
 #contact {
   margin-bottom: 100px;
 }
+
+#contact h1, h3{
+  padding-bottom:26px;
+}
 .contact-form-wrap {
     width: 100%;
     background: #e84e4a;
