changes user show view dpeending on current user or not

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -47,7 +47,11 @@
 		</div>
 	</div>
 	<div class="row">
-		<h3 class="text-center"><%= @user.full_name %>'s workshops</h3><br>
+	<% if !current_user or current_user != @user %>
+			<h3 class="text-center"><%= @user.full_name %>'s Workshops</h3><br>
+		<% else %>
+			<h3 class="text-center">My Workshops</h3><br>
+	<% end %>
 		<div class="col-md-12">
 			<% @user.workshops.each do |workshop| %>
 				<div class="col-md-4">
