--- a/app/views/workshops/_workshop_form.html.erb
+++ b/app/views/workshops/_workshop_form.html.erb
@@ -26,7 +26,7 @@
   </div>
   <div class="field">
     <%= f.label :image do %>
-      Image <span class="optional-text">(optinal):</span>
+      Image <span class="optional-text">(optional):</span>
     <% end %>
     <br />
     <%= f.file_field :image, :class => "form-control" %>
