--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,10 @@
     <link href="https://fonts.googleapis.com/css?family=Lato|Lustria|Roboto|Merriweather" rel="stylesheet">
   </head>
   <body>
-    <div class="nav-and-yield">
+   <div class="nav-and-yield">
       <!--Nav bar -->
-      <nav class="navbar navbar-default navbar-static-top navbar-custom">
-        <div class="navbar-custom">
+      <nav class="navbar navbar-inverse navbar-custom navbar-static-top">
+
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
             <span class="sr-only">Toggle navigation</span>
@@ -43,7 +43,7 @@
             <% end %>
           </ul>
         </div>
-      </div>
+
     </nav>
     <!-- Devise Flash MSG -->
     <div class="notice-error-msg">
