--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,10 +30,17 @@
             <ul class="nav navbar-nav navbar-right">
               <% if current_user %>
               <li><%= link_to "Post a Talk", new_workshop_path, class:"btn btn-default" %> </li>
+              <li class="inbox-li">
+                <%= link_to mailbox_inbox_path do %>
+                  <%= fa_icon "envelope", id: "envelope" %> <span style="<%= unread_messages_count > 0 ? 'margin-left: 3px;' : ''%>">Inbox</span>
+                  <% if unread_messages_count > 0 %>
+                    <span id="inbox-notification"><%= unread_messages_count %></span>
+                  <% end %>
+                <% end %>
+              </li>
               <li><a class="dropdown-toggle" data-toggle="dropdown" href="#"><%= current_user.full_name.titleize %> <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><%= link_to "Profile", user_path(current_user) %></li>
-                <li><%= link_to "Inbox", mailbox_inbox_path %></li>
                 <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
               </ul>
             </li>
