--- a/app/views/mailbox/_folders.html.erb
+++ b/app/views/mailbox/_folders.html.erb
@@ -1,14 +1,13 @@
-<ul class="nav nav-pills nav-stacked">
+<ul class="nav nav-pills nav-stacked inbox-folder">
+  <li><%= link_to "Compose", new_conversation_path, class: "btn btn-success compose-btn", style: "width: 100%;" %></li>
   <li class="<%= active_page(:inbox) %>">
     <%= link_to mailbox_inbox_path do  %>
-        <span class="label label-danger pull-right"><%=unread_messages_count%></span>
         <em class="fa fa-inbox fa-lg"></em>
-        <span>Inbox</span>
+        <span>Inbox</span> <%= unread_messages_count > 0 ? " (#{unread_messages_count})" : ""%>
     <% end %>
   </li>
   <li class="<%= active_page(:sent) %>">
     <%= link_to mailbox_sent_path do %>
-
         <em class="fa fa-paper-plane-o fa-lg"></em>
         <span>Sent</span>
     <% end %>
