--- a/app/views/mailbox/_folder_view.html.erb
+++ b/app/views/mailbox/_folder_view.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
-  <div class="row inbox-folder-wrapper">
-    <div class="col-md-2">
+  <div class="row inbox-folder-wrapper zero-margin">
+    <div class="col-md-3">
       <div class="panel panel-default">
         <div class="panel-body">
           <%= render 'mailbox/folders' %>
@@ -8,7 +8,7 @@
       </div>
     </div>
 
-    <div class="col-md-10">
+    <div class="col-md-9">
       <div class="panel panel-default">
         <div class="panel-body">
         <% if is_conversation %>
