--- a/app/views/sites/contact.html.erb
+++ b/app/views/sites/contact.html.erb
@@ -1,5 +1,5 @@
 <div class="container-fluid" id="contact">
-	<div class="row text-center contact-info">
+	<div class="row text-center contact-info zero-margin">
 		<h1>CONTACT US</h1>
 		<h3>Questions? Comments? We would love to hear from you.</h3>
 		<div class="col-md-4 icons">
@@ -19,7 +19,7 @@
 		</div>
 	</div>
 
-	<div class="row contact-form-wrap">
+	<div class="row contact-form-wrap zero-margin">
 		<div class="col-md-6 col-md-offset-3">
 			<h3 class="text-center">Send Us a Message</h3>
 				<%= form_for @message, :html => { :style => 'background-color:#e84e4a;' } do |f| %>
