--- a/app/views/mailbox/inbox.html.erb
+++ b/app/views/mailbox/inbox.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: 'mailbox/folder_view', locals: { is_conversation: false, messages: @inbox } %>
+<%= render partial: 'mailbox/folder_view', locals: { is_conversation: false, messages: @inbox, sent_view: false, inbox_view: true } %>
