--- a/app/views/mailbox/sent.html.erb
+++ b/app/views/mailbox/sent.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: 'mailbox/folder_view', locals: { is_conversation: false, messages: @sent } %>
+<%= render partial: 'mailbox/folder_view', locals: { is_conversation: false, messages: @sent, sent_view: true, inbox_view: false } %>
