--- a/app/views/mailbox/trash.html.erb
+++ b/app/views/mailbox/trash.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: 'mailbox/folder_view', locals: { is_conversation: false, messages: @trash } %>
+<%= render partial: 'mailbox/folder_view', locals: { is_conversation: false, messages: @trash, sent_view: false, inbox_view: false } %>
