--- a/app/views/mailbox/_folder_view.html.erb
+++ b/app/views/mailbox/_folder_view.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid mailbox-view">
   <div class="row inbox-folder-wrapper zero-margin">
     <div class="col-md-3">
       <div class="panel panel-default">
