--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             </button>
-            <%= link_to image_tag("big-talker-logo-bold2.png", alt: "Big Talker"), '/', class: "navbar-brand navbar-logo" %>
+            <%= link_to image_tag("big-talker-logo-white.png", alt: "Big Talker"), '/', class: "navbar-brand navbar-logo" %>
           </div>
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
