styles contact section and page and footer color

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -55,14 +55,18 @@ html, body {
   height: 102px; 
 }
 footer {
-  background-color: #e6e6e6;
+  background-color: #2780e3;
   padding: 40px;
   .footer-nav {
     display: inline; 
     padding-right: 10px; 
     padding-left: 10px; 
   }
+  a{
+    color:#fff;
+  }
 }
+
 
 .yield-wrapper {
   margin-top: 30px
@@ -240,7 +244,7 @@ footer {
  }
 
 .contact-container {
- 	background-color: #e84e4a;
+ 	background-color: #111;
   height: 220px;
 
 
@@ -452,7 +456,7 @@ ul.dropdown-menu{
     padding: 40px 0px 70px 0px;
   }
   .contact-form-wrap {
-      background: #e84e4a;
+      background: #111;
       padding: 50px 0;
       .row {
         margin-left: 0px;
