--- a/app/views/sites/contact.html.erb
+++ b/app/views/sites/contact.html.erb
@@ -21,8 +21,8 @@
 
 	<div class="row contact-form-wrap zero-margin">
 		<div class="col-md-6 col-md-offset-3">
-			<h3 class="text-center">Send Us a Message</h3>
-				<%= form_for @message, :html => { :style => 'background-color:#e84e4a;' } do |f| %>
+			<h3 class="text-center" style="color:#fff">Send Us a Message</h3>
+				<%= form_for @message, :html => { :style => 'background-color:#111; color:#fff' } do |f| %>
 					<div class="row">
 						<div class="col-sm-6">
 							<div class="field form-group">
