changes main page to talks, styles footer

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -243,6 +243,9 @@ footer {
   }
  }
 
+.workshop-index {
+  margin: 10px 10px;
+}
 .contact-container {
  	background-color: #111;
   height: 220px;
