--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -13,8 +13,8 @@
 	<!-- Search Bar -->
 	<%= render "search_bar" %>
 
-	<!-- Featured Workshops -->
-	<h1 class="text-center">Featured Workshops</h1>
+	<!-- Featured Talks -->
+	<h1 class="text-center">Featured Talks</h1>
 	<div class="workshop-container">
 		<div class="row">
 			<% @featured_workshops.each do |workshop| %>
