--- a/app/views/workshops/index.html.erb
+++ b/app/views/workshops/index.html.erb
@@ -4,12 +4,13 @@
 	<br>	
 	<div class="container">
 		<div class="row">
-			<div class="col-md-12">
+
 				<% @workshops.each do |workshop| %>
+		<div class="col-md-12 workshop-index">
 				<div class="col-md-4">
 					<%= image_tag workshop.image.url(:medium), class: "img-responsive workshop-img" %>
 				</div>
-				<div class="col-md-8">
+				<div class="col-md-8 well">
 					<h2><%= link_to workshop.title.titleize, workshop_path(workshop), class: "workshop-title-link" %></h2>
 					<h4>
 						Topic: <%= workshop.topic.name.titleize %>
