styles talk index and about page

--- a/app/views/sites/about.html.erb
+++ b/app/views/sites/about.html.erb
@@ -1,6 +1,6 @@
 <div class="container" id="about">
 	<div class="row">
-		<div class="col-md-8 col-md-offset-2 well">
+		<div class="col-md-8 col-md-offset-2">
 			<h1 class="text-center">About Big Talker</h1>
 			<h4>Big Talker is a trusted marketplace for onsite guest speakers and workshops.   Find your team's next inspiring guest speaker or team building exercise.   Check community generated reviews and ratings to find the next career-enhancing talk for your team.</h4>
 			<p>Interested in posting a talk or finding a talk that's not listed? Contact us at <a href="mailto:hello.bigtalker@gmail.com?Subject=Hello" target="_top">hello.bigtalker@gmail.com</a></p>
