adding bootstrap correction to head

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name=”viewport” content=”width=device-width, initial-scale=1.0″ >
+    <meta name=”viewport” content=”width=device-width, initial-scale=1.0">
+    <meta name="description" content="Big Talker is a marketplace for workshops, seminars, and onsite guest speakers.">
+    <%= favicon_link_tag asset_path('favicon.ico'), type:'image/png' %>
     <title>Big Talker</title>
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= csrf_meta_tags %>
