--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name=”viewport” content=”width=device-width, initial-scale=1.0">
-    <meta name="description" content="Big Talker is a marketplace for workshops, seminars, and onsite guest speakers.">
+    <meta name="description" content="Big Talker is a marketplace for onsite workshops, seminars, and guest speakers.">
     <%= favicon_link_tag asset_path('favicon.ico'), type:'image/png' %>
     <title>Big Talker</title>
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= csrf_meta_tags %>
     <link href="https://fonts.googleapis.com/css?family=Lato|Lustria|Roboto|Merriweather" rel="stylesheet">
+    <meta name=”viewport” content=”width=device-width, initial-scale=1.0">
   </head>
   <body>
     <div class="nav-and-yield">
@@ -20,7 +20,6 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           </button>
-
           <%= link_to image_tag("big-talker-logo-white.png", alt: "Big Talker"), '/', class: "navbar-brand navbar-logo" %>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -84,7 +83,6 @@
       <% end %>
     </div>
     <!-- end Devise Flash MSG -->
-
     <div class="yield-wrapper">
       <%= yield %>
     </div>
