--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= csrf_meta_tags %>
     <link href="https://fonts.googleapis.com/css?family=Lato|Lustria|Roboto|Merriweather" rel="stylesheet">
-    <meta name=”viewport” content=”width=device-width, initial-scale=1.0">
+    <meta name=”viewport” content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <div class="nav-and-yield">
