more quote fixes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Big Talker is a marketplace for onsite workshops, seminars, and guest speakers.">
     <%= favicon_link_tag asset_path('favicon.ico'), type:'image/png' %>
     <title>Big Talker</title>
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= csrf_meta_tags %>
     <link href="https://fonts.googleapis.com/css?family=Lato|Lustria|Roboto|Merriweather" rel="stylesheet">
-    <meta name=”viewport” content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <div class="nav-and-yield">
