--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -9,7 +9,7 @@
 				<%= f.email_field :email, autofocus: true, :class => "form-control", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %><br>
 			</div>
 			<div class="actions text-center">
-				<%= f.submit "Resend confirmation instructions", :class => "btn btn-primary" %>
+				<%= f.submit "Resend Confirmation Instructions", :class => "btn btn-primary" %>
 			</div>
 			<% end %>
 			<%= render "devise/shared/links" %>
