--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,23 +1,23 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6 col-md-offset-3 well">
-      <h2>Change your password</h2>
+      <h2>Change Your Password</h2>
       <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
       <%= devise_error_messages! %>
       <%= f.hidden_field :reset_password_token %>
       <div class="field">
-        <%= f.label :password, "New password" %><br />
+        <%= f.label :password, "New Password" %><br />
         <% if @minimum_password_length %>
         <em>(<%= @minimum_password_length %> characters minimum)</em><br />
         <% end %>
         <%= f.password_field :password, autofocus: true, autocomplete: "off", :class => "form-control" %>
       </div>
       <div class="field">
-        <%= f.label :password_confirmation, "Confirm new password" %><br />
+        <%= f.label :password_confirmation, "Confirm New Password" %><br />
         <%= f.password_field :password_confirmation, autocomplete: "off", :class => "form-control" %>
       </div>
       <div class="actions">
-        <%= f.submit "Change my password" %>
+        <%= f.submit "Change My Password" %>
       </div>
       <% end %>
       <%= render "devise/shared/links" %>
