--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,11 +1,11 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6 col-md-offset-3 well">
-      <h2>Sign up</h2>
+      <h2>Sign Up</h2>
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
       <div class="field">
-        <%= f.label :full_name, "Full name*" %><br />
+        <%= f.label :full_name, "Full Name*" %><br />
         <%= f.text_field :full_name, autofocus: true, :class => "form-control" %>
       </div>
       <div class="field">
@@ -21,14 +21,14 @@
         <%= f.text_field :location, :class => "form-control location-input" %>
       </div>
       <div class="field">
-        <%= f.label :password, "Password*" %>
+        <%= f.label :password, "Password* (Min. 8 characters)" %>
         <% if @minimum_password_length %>
         <em>(<%= @minimum_password_length %> characters minimum)</em>
         <% end %><br />
         <%= f.password_field :password, autocomplete: "off", :class => "form-control" %>
       </div>
       <div class="field">
-        <%= f.label :password_confirmation, "Confirm password*" %><br />
+        <%= f.label :password_confirmation, "Confirm Password*" %><br />
         <%= f.password_field :password_confirmation, autocomplete: "off", :class => "form-control" %><br>
       </div>
       * required field
