--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3 well">
-			<h2>Resend unlock instructions</h2>
+			<h2>Resend Unlock Instructions</h2>
 			<%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
 			<%= devise_error_messages! %>
 			<div class="field">
