--- a/app/views/workshops/_workshop_form.html.erb
+++ b/app/views/workshops/_workshop_form.html.erb
@@ -12,7 +12,7 @@
   </div>
   <div class="field">
     <%= f.label :description do %>
-    	Description <span class="required-text">(required):</span>
+    	Description (50 Character Minimum) <span class="required-text">(required):</span>
     <% end %>
     <br />
     <%= f.text_area :description, :class => "form-control", rows: "5" %>
