changes workshop view links depending on if current user or not

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-	<div class="row well">
+	<div class="row thumbnail">
 		<div class="col-md-4">
 			<div class="avatar-wrapper text-center">
 				<%= image_tag @user.avatar.url(:medium), class: "avatar-img", style: "max-width: 300px;" %>
