--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -53,7 +53,7 @@
 			<h3 class="text-center">My Workshops</h3><br>
 	<% end %>
 		<div class="col-md-12">
-			<% @user.workshops.each do |workshop| %>
+			<% @workshops.each do |workshop| %>
 				<div class="col-md-4">
 					<%= image_tag workshop.image.url(:medium), class: "img-responsive workshop-img" %>
 				</div>
@@ -73,5 +73,8 @@
 				</div>
 			<% end %>
 		</div>
+	</div>
+	<div class="text-center pagination-wrapper">
+		<%= will_paginate @workshops, class: "pagination-ui" %>
 	</div>
 </div>
