add truncate in user show page, notice/alert msg disappear in 10s, reviews count

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -64,7 +64,7 @@
 						<br>
 						Location: <%= workshop.location.titleize %>
 					</h4>
-					<p><%= workshop.description %></p>
+					<p><%= simple_format(truncate(workshop.description, length: 200, seprator: ' ')) %></p>
 					<% if !current_user or current_user != @user %>
 						<div class="text-center">
 							<%= link_to "View", workshop_path(workshop), class: "btn btn-primary" %>
