--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,7 @@
     <!-- Devise Flash MSG -->
     <div class="notice-error-msg">
       <% if notice.present? %>
-      <div class="alert devise-msg <%= params[:controller] == 'plans' ? 'alert-warning animated bounceInUp' : 'alert-info' %>">
+      <div class="alert devise-msg alert-info %>">
         <a aria-label="close" class="close" data-dismiss="alert" href="#">&times;</a>
         <p>
           <%= notice %>
@@ -70,16 +70,16 @@
       </div>
       <% end %>
       <% flash.each do |name, msg| %>
-      <% if name == 'error' %>
-      <div class="notice-error-msg">
-        <div class="alert remind-msg alert-danger">
-          <a aria-label="close" class="close" data-dismiss="alert" href="#">&times;</a>
-          <p>
-            <%= msg %>
-          </p>
-        </div>
-      </div>
-      <% end %>
+        <% if name == 'error' %>
+          <div class="notice-error-msg">
+            <div class="alert remind-msg alert-danger">
+              <a aria-label="close" class="close" data-dismiss="alert" href="#">&times;</a>
+              <p>
+                <%= msg %>
+              </p>
+            </div>
+          </div>
+        <% end %>
       <% end %>
     </div>
     <!-- end Devise Flash MSG -->
