--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -115,10 +115,10 @@ footer {
   }
   .navbar-collapse {
     // style navbar collapse when click hamburger button
-    // background-color: #fafafa;
-    border-color: #fff;
-    border-width: 3px;
+
     @media (max-width: 767px) {
+      background-color: #fff !important;
+      color: #2780e3 !important;
       margin-top: 10px;
       box-shadow: 2px 2px 2px #b9b9b9;
       -webkit-box-shadow: 2px 2px 2px #b9b9b9;
@@ -131,30 +131,38 @@ footer {
         padding-right: 10px;
       }
       .navbar-nav .open .dropdown-menu > li > a {
-        color: #1D86FF;
+        background-color: #fff;
+        color: #2780e3;
       }
       .navbar-nav .open .dropdown-menu > li > a:hover, 
       .navbar-nav .open .dropdown-menu > li > a:focus {
-        background-color: #e9e9e9;
+        background-color: #e9e9e9 !important;
+        color: #2780e3 !important;
       }
     }
+  }
+
+  .navbar-collapse a:hover {
+     background-color: #e9e9e9 !important;
+     color: #2780e3 !important;
   }
   .navbar-nav > .open > a, 
   .navbar-nav > .open > a:hover, 
   .navbar-nav > .open > a:focus {
-    // background-color: #2780E3 !important;
-    color: #fff !important;
+    background-color: #e9e9e9 !important;
+    color: #2780e3 !important;
+   
   }
   // end overrided mobile navbar styling
 }
 .navbar-nav >li > a {
-	// color: #1D86FF !important;
+	color: #1D86FF !important;
 }
 
 .navbar-custom li a {
 	line-height: 59px;
   font-size: 18px;
-  // color: #1D86FF;
+  color: #2780e3;
   border: none;
 }
 
@@ -170,8 +178,8 @@ footer {
 }
 
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-    color: #fff;
-    // background-color: #e9e9e9;
+    color: #2780e3;
+    background-color: #e9e9e9;
 }
 
 .navbar-toggle {
