styles send button, talk index on user profile view, and new workshop form

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -586,3 +586,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, 
     color: white;
   }
 }
+
+.btn-send {
+  width: 24%;
+  margin: 0 auto;
+}
