--- a/app/views/sites/contact.html.erb
+++ b/app/views/sites/contact.html.erb
@@ -48,7 +48,7 @@
 						    <%= f.text_area :content, rows: "7", required: true, class: "form-control" %>
 						  </div>
 						  <div class="actions form-group">
-						    <%= f.submit 'Send', class: 'button btn-primary form-control' %>
+						    <%= f.submit 'Send', class: 'button btn-primary form-control btn-send' %>
 						  </div>
 						</div>
 					</div>
