--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -52,12 +52,12 @@
 		<% else %>
 			<h3 class="text-center">My Talks</h3><br>
 	<% end %>
-		<div class="col-md-12">
 			<% @workshops.each do |workshop| %>
+		<div class="col-md-12 thumbnail">
 				<div class="col-md-4">
 					<%= image_tag workshop.image.url(:medium), class: "img-responsive workshop-img" %>
 				</div>
-				<div class="col-md-8 well">
+				<div class="col-md-8">
 					<h2><%= link_to workshop.title.titleize, workshop_path(workshop), class: "workshop-title-link" %></h2>
 					<h4>
 						Topic: <%= workshop.topic.name.titleize %>
@@ -71,8 +71,8 @@
 						</div>
 					<% end %>
 				</div>
-			<% end %>
 		</div>
+				<% end %>
 	</div>
 	<div class="text-center pagination-wrapper">
 		<%= will_paginate @workshops, class: "pagination-ui" %>
