--- a/app/views/workshops/new.html.erb
+++ b/app/views/workshops/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-6 col-md-offset-3 well">
+    <div class="col-md-6 col-md-offset-3 thumbnail formthumbnail">
       <h2>Post a Talk</h2>
       <%= render "workshop_form" %>
     </div>
