--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -13,3 +13,17 @@
   	margin-top: 10px;
   }
 }
+
+.userthumb{
+	margin-top: 25px;
+	text-align: center;
+
+	img {
+		margin-top: 25px;
+	}
+
+	h4, p {
+		display: inline-block;
+		text-align:left;
+	}
+}
