--- a/app/assets/stylesheets/workshops.scss
+++ b/app/assets/stylesheets/workshops.scss
@@ -33,6 +33,7 @@ select#workshop_topic_id {
 }
 .workshop-img {
 	margin: 0 auto;
+	padding-top:25px;
 }
 .workshop-box.center-block {
 	position: relative;
