--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
-	<div class="row thumbnail">
-		<div class="col-md-4">
-			<div class="avatar-wrapper text-center">
+	<div class="row thumbnail userthumb">
+		<div class="col-md-4 userchild">
+			<div class="avatar-wrapper">
 				<%= image_tag @user.avatar.url(:medium), class: "avatar-img", style: "max-width: 300px;" %>
 			</div>
 		</div>
@@ -10,7 +10,7 @@
 			<h4>
 				Location: <%= @user.location.titleize %><br>
 				Member since: <%= @user.created_at.to_date.to_formatted_s(:long_ordinal) %><br>
-			</h4>
+			</h4><br>
 			<p>Organization:
 				<% if @user.organization %>
 					<%= @user.organization %>
