updated mailers with bigtalker branding

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -193,7 +193,8 @@ footer {
  	min-height: 500px;
   max-height: 500px; 
  	text-align: center;
- 	background: url(https://static.pexels.com/photos/1984/black-and-white-city-man-people.jpg) no-repeat 45% 50%;
+ 	// background: url(https://static.pexels.com/photos/1984/black-and-white-city-man-people.jpg) no-repeat 45% 50%;
+  background: url(http://raptstudio.com/wp-content/uploads/2015/08/545A8041.jpg) no-repeat 45% 50%;
  	background-size: cover;
  	color: #fff;
   margin-bottom: 0px;
