--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -5,5 +5,5 @@
 </p>
 <p>If you didn't request this, please ignore this email.</p>
 <p>Your password won't change until you access the link above and create a new one.</p>
-<p>Workshoply Team</p>
+<p>BigTalker Team</p>
 <p>*** This is an automatically generated email, please do not reply ***</p>
