--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -7,7 +7,7 @@
 			<p>
 				<%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %>
 			</p>
-			<p>Workshoply</p>
+			<p>BigTalker</p>
 			<p>*** This is an automatically generated email, please do not reply ***</p>
 		</div>
 	</div>
