--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,5 @@
 <p>Greetings,</p>
-<p>Thank you for registering with Workshoply and enjoy using our workshop booking platform.</p>
+<p>Thank you for registering with BigTalker and enjoy using our marketplace for guest speakers.</p>
 <p>Please confirm your account email by clicking the link below:</p>
 <%= link_to confirmation_url(@resource, confirmation_token: @token) do %>
   <img alt="activate" src="https://c8.staticflickr.com/8/7345/27512037551_e5d2636613_m.jpg"/>
@@ -11,5 +11,5 @@
 <p>
   <i>This link will be expired within 7 days after this email was sent</i>
 </p>
-<p>Workshoply Team</p>
+<p>BigTalker Team</p>
 <p>*** This is an automatically generated email, please do not reply ***</p>
