--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -1,4 +1,4 @@
 <p>Greetings,</p>
 <p>We're contacting you to notify you that your password has been changed. If you did not change your password, please contact us immediately</p>
-<p>Wrokshoply Team</p>
+<p>BigTalker Team</p>
 <p>*** This is an automatically generated email, please do not reply ***</p>
