--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -202,7 +202,7 @@ footer {
     padding-top: 80px;
     font-size: 4em;
     font-weight: bold;
-    text-shadow: 1px 2px #9b9b9b
+    text-shadow: 1px 2px #9b9b9b;
    }
   h2 {
     padding-bottom: 80px;
