--- a/app/views/workshops/show.html.erb
+++ b/app/views/workshops/show.html.erb
@@ -1,67 +1,69 @@
 <div class="container workshop-show">
 	<div class="row workshop-info">
-		<div class="col-md-8">
-			<div class="workshop-box center-block">
-				<%= image_tag @workshop.image.url(:medium), class: "img-responsive workshop-img" %>
-				<h2><%= @workshop.title.titleize %></h2>
-				<h4>
+		<% if current_user == @workshop.user %>
+			<div class="col-md-12 text-center">
+		<% else %>
+			<div class="col-md-8">
+		<% end %>
+	<div class="workshop-box center-block">
+		<%= image_tag @workshop.image.url(:medium), class: "img-responsive workshop-img" %>
+			<h2><%= @workshop.title.titleize %></h2>
+			<h4>
 				<span class="h4-big">Topic: <%= @workshop.topic.name.titleize %></span><br class="br-big">
-				Location: <%= @workshop.location.titleize %><br>
-				Speaker: <%= link_to @workshop.user.full_name.titleize, user_path(@workshop.user), class: "speaker-name-link" %>
-				</h4>
-				<div class="row clearfix overall-rating-wrapper">
-					<div class="col-sm-7">
-						<div id="rating-box">
-							<div class="small-2 large-4 columns">
-								<h4><%= pluralize(@workshop.reviews.count, 'review') %> <%= @workshop.reviews.count == 0 ? ' - Be first to review.' : '' %></h4>
+					Location: <%= @workshop.location.titleize %><br>
+					Speaker: <%= link_to @workshop.user.full_name.titleize, user_path(@workshop.user), class: "speaker-name-link" %>
+			</h4>
+		<% if current_user == @workshop.user %>
+			<%= link_to edit_workshop_path(@workshop), class: "btn btn-primary" do %>
+			<%= fa_icon "pencil-square-o " %>
+		<% end %>
+		<%= link_to @workshop, method: :delete, data: {confirm: "Are you sure you want to delete your talk?"}, class: "btn btn-danger" do %>
+			<%= fa_icon "trash-o " %>
+			<% end %>
+			<% end %> 
+		<div class="row clearfix overall-rating-wrapper">
+			<div class="col-sm-7">
+				<div id="rating-box">
+					<div class="small-2 large-4 columns">
+						<h4><%= pluralize(@workshop.reviews.count, 'review') %> <%= @workshop.reviews.count == 0 ? ' - Be first to review.' : '' %></h4>
 								<%= rating_for @workshop, "rating", disabled: true, readonly: true, id: "trunghuynh" %>
 								<br>
 								<% if current_user != @workshop.user %>
 									<%= link_to "WRITE A REVIEW", new_workshop_review_path(@workshop), class: "btn btn-primary btn-review" %>
-								<% elsif current_user == @workshop.user %>
-									<%= link_to edit_workshop_path(@workshop), class: "btn btn-primary" do %>
-										<%= fa_icon "pencil-square-o " %>
-									<% end %>
-									<%= link_to @workshop, method: :delete, data: {confirm: "Are you sure you want to delete your talk?"}, class: "btn btn-danger" do %>
-										<%= fa_icon "trash-o " %>
-										<% end %>
-									<% end %>
-								</div>
-								
-							</div>
+								<% end %>
 						</div>
 					</div>
-					
-				</div>
-				<div id="workshop-description">
-					<p><%= simple_format(@workshop.description) %></p>
-				</div>
 			</div>
-			
-			<% if current_user != @workshop.user %>
-			<div class="col-md-4">
-				<div class="span4">
-					<h3>About the Speaker</h3>
-					<%= image_tag(@workshop.user.avatar.url(:thumb), style: "height: 100px") %>
-					<h4>
-						<%= @workshop.user.full_name.titleize %><br>
-						<%= @workshop.user.location.titleize %>
-					</h4>
-					<% if !current_user or current_user != @workshop.user %>
-					<div class="msg-btn-wrapper">
-						<%= link_to "MESSAGE", new_conversation_path(workshop: @workshop), class: "btn btn-primary msg-btn" %>
-					</div>
-					<% end %>
-					<p class="speaker-bio"><%= simple_format(@workshop.user.bio) %></p>
+		</div>
+		<div id="workshop-description">
+			<p><%= simple_format(@workshop.description) %></p>
+		</div>
+	</div>
+</div>
+<% if current_user != @workshop.user %>
+	<div class="col-md-4">
+		<div class="span4">
+			<h3>About the Speaker</h3>
+				<%= image_tag(@workshop.user.avatar.url(:thumb), style: "height: 100px") %>
+			<h4>
+				<%= @workshop.user.full_name.titleize %><br>
+				<%= @workshop.user.location.titleize %>
+			</h4>
+	<% if !current_user or current_user != @workshop.user %>
+		<div class="msg-btn-wrapper">
+			<%= link_to "MESSAGE", new_conversation_path(workshop: @workshop), class: "btn btn-primary msg-btn" %>
+		</div>
+	<% end %>
+		<p class="speaker-bio"><%= simple_format(@workshop.user.bio) %></p>
 				</div>
 			</div>
 		</div>
 		<% end %>
-		<div class="row">
-			<div class="col-md-12">
-				<% if @current_user_review %>
-					<h4>Your review:</h4>
-					<div class="review-container">
+	<div class="row">
+		<div class="col-md-12">
+			<% if @current_user_review %>
+				<h4>Your Review:</h4>
+				  <div class="review-container">
 						<div class="workshop-index-speaker clearfix">
 							<%= link_to image_tag(@current_user_review.user.avatar.url(:thumb)), user_path(@current_user_review.user), class: "tiny-thumb" %>
 							<span>
@@ -73,32 +75,33 @@
 								<%= link_to "Edit", edit_workshop_review_path(@workshop, @current_user_review) %>
 								<%= link_to "Delete", workshop_review_path(@workshop, @current_user_review), method: :delete, data: {confirm: "Are you sure?"} %>
 							</span>
-						</div>
-						<p><%= simple_format(@current_user_review.text) %></p>
 					</div>
-				<% end %>
-				<% if @reviews.count > 0 %>
-					<hr>
-					<h2>Users' Reviews</h2>
+						<p><%= simple_format(@current_user_review.text) %></p>
+			</div>
+		<% end %>
+		<% if @reviews.count > 0 %>
+			<hr>
+				<h2>Users' Reviews</h2>
 					<% @reviews.each do |review| %>
-						<div class="review-container">
-							<div class="workshop-index-speaker clearfix">
-								<%= link_to image_tag(review.user.avatar.url(:thumb)), user_path(review.user), class: "tiny-thumb" %>
-								<span>
-									<h4 class="speaker-name-link"><%= review.user.full_name.titleize %>
-									<br>
-									<div class="user-rating-wrapper">
-										<%= rating_for_user @workshop, review.user, "rating", disabled: true, readonly: true %>
-									</div>
-									</h4>
+					<div class="review-container">
+						<div class="workshop-index-speaker clearfix">
+							<%= link_to image_tag(review.user.avatar.url(:thumb)), user_path(review.user), class: "tiny-thumb" %>
+							<span>
+								<h4 class="speaker-name-link"><%= review.user.full_name.titleize %>
+								<br>
+								<div class="user-rating-wrapper">
+									<%= rating_for_user @workshop, review.user, "rating", disabled: true, readonly: true %>
+								</div>
+								</h4>
 									<%= time_ago_in_words(review.created_at) %> ago
-								</span>
-							</div>
-							<p><%= simple_format(review.text) %></p>
+							</span>
 						</div>
-						<hr class="hr-medium">
-					<% end %>
+						<p><%= simple_format(review.text) %></p>
+					</div>
+				<hr class="hr-medium">
+				<% end %>
 				<% end %>
 			</div>
 		</div>
 	</div>
+</div>
