--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -98,6 +98,7 @@ footer {
     margin: 0px;
   }
   .navbar-logo img {
+    margin: 0 0 0 15px;
     margin-top: 3px;
     height: 45px;
   }
@@ -204,21 +205,22 @@ footer {
   max-height: 500px; 
  	text-align: center;
  	// background: url(https://static.pexels.com/photos/1984/black-and-white-city-man-people.jpg) no-repeat 45% 50%;
-  background: url(http://raptstudio.com/wp-content/uploads/2015/08/545A8041.jpg) no-repeat 45% 50%;
- 	background-size: cover;
+  // background: url(http://raptstudio.com/wp-content/uploads/2015/08/545A8041.jpg) no-repeat 45% 50%;
+ 	background: url(http://i.imgur.com/yK5tMXm.jpg) no-repeat 45% 50%;
+  background-size: cover;
  	color: #fff;
   margin-bottom: 0px;
   h1 {
     padding-top: 80px;
     font-size: 4em;
     font-weight: bold;
-    text-shadow: 1px 2px #9b9b9b;
+    // text-shadow: 1px 2px #9b9b9b;
    }
   h2 {
     padding-bottom: 80px;
     font-size: 2em;
     font-weight: bold;
-    text-shadow: 1px 1px #9b9b9b
+    // text-shadow: 1px 1px #9b9b9b
    }
  }
 
