--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -21,7 +21,7 @@
 					<div class="thumbnail featured-workshop">
 						<%= image_tag workshop.image.url(:medium), class: "img-responsive workshop-img vertical-align" %>
 						<div class="featured-workshop-title-wrapper">
-							<h3><%= link_to workshop.title.titleize, workshop_path(workshop), class: "workshop-title-link" %></h3>
+							<h3><strong><%= link_to workshop.title.titleize, workshop_path(workshop), class: "workshop-title-link" %></strong></h3>
 						</div>
 							<h4>
 							Topic: <%= workshop.topic.name.titleize %>
