--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -43,7 +43,7 @@
 				</div>
 			<% end %>
 		</div>
-	</div>
+	</div><hr>
 	<!-- End Featured Workshops -->
 	<div class="contact-container">
 		<div class="text-center">
