--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -34,8 +34,6 @@ html, body {
   height: 100%;
 }
 
-
-
 .zero-margin {
   margin-left: 0px;
   margin-right: 0px;
@@ -44,7 +42,7 @@ html, body {
 .nav-and-yield {
   min-height: 100%;
   /* equal to footer height */
-  margin-bottom: -80px; 
+  margin-bottom: -102px; 
 }
 .nav-and-yield:after {
   content: "";
@@ -52,7 +50,7 @@ html, body {
 }
 .nav-and-yield:after {
   /* .push must be the same height as footer */
-  height: 40px; 
+  height: 102px; 
 }
 footer {
   background-color: #fff;
@@ -63,7 +61,7 @@ footer {
     padding-left: 10px; 
   }
   a{
-    color:#3f4652;
+    color:#2780e3;
   }
 }
 
@@ -478,7 +476,7 @@ ul.dropdown-menu{
     padding: 40px 0px 70px 0px;
   }
   .contact-form-wrap {
-      background: #111;
+      background: #3f4652;
       padding: 50px 0;
       .row {
         margin-left: 0px;
@@ -590,4 +588,14 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, 
 .btn-send {
   width: 24%;
   margin: 0 auto;
+}
+
+.btn-default {
+    color: #fff;
+    background-color: #3f4652;
+    border-color: #222222;
+}
+
+.fa-envelope-o:before, .fa-map-marker:before, .fa-mobile-phone:before {
+  color: #3f4652;
 }
