--- a/app/views/workshops/show.html.erb
+++ b/app/views/workshops/show.html.erb
@@ -11,7 +11,10 @@
 			<h4>
 				<span class="h4-big">Topic: <%= @workshop.topic.name.titleize %></span><br class="br-big">
 					Location: <%= @workshop.location.titleize %><br>
-					Speaker: <%= link_to @workshop.user.full_name.titleize, user_path(@workshop.user), class: "speaker-name-link" %>
+					Speaker: <%= link_to @workshop.user.full_name.titleize, user_path(@workshop.user), class: "speaker-name-link" %><br>
+					Duration: <%= @workshop.duration %><br>
+					Format: <%= @workshop.format %><br>
+					Expected Outcomes: <%= @workshop.expected_outcomes %>
 			</h4>
 		<% if current_user == @workshop.user %>
 			<%= link_to edit_workshop_path(@workshop), class: "btn btn-primary" do %>
