--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <meta name="description" content="Big Talker is a marketplace for onsite workshops, seminars, and guest speakers.">
     <%= favicon_link_tag asset_path('favicon.ico'), type:'image/png' %>
     <title>Big Talker</title>
+    <%= render 'favicon' %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= csrf_meta_tags %>
     <link href="https://fonts.googleapis.com/css?family=Lato|Lustria|Roboto|Merriweather" rel="stylesheet">
