add price to controller, model, and views

--- a/app/views/workshops/show.html.erb
+++ b/app/views/workshops/show.html.erb
@@ -15,6 +15,7 @@
 					Duration: <%= @workshop.duration %><br>
 					Format: <%= @workshop.format %><br>
 					Expected Outcomes: <%= @workshop.expected_outcomes %>
+					Price: $ <%= @workshop.price %>
 			</h4>
 		<% if current_user == @workshop.user %>
 			<%= link_to edit_workshop_path(@workshop), class: "btn btn-primary" do %>
