--- a/app/views/workshops/_workshop_form.html.erb
+++ b/app/views/workshops/_workshop_form.html.erb
@@ -38,12 +38,19 @@
     <br />
     <%= f.text_area :format, :class => "form-control" %>
   </div>
-    <div class="field">
+  <div class="field">
     <%= f.label :expected_outcomes do %>
       Expected Outcomes
     <% end %>
     <br />
     <%= f.text_area :expected_outcomes, :class => "form-control", rows: "5" %>
+  </div>
+  <div class="field">
+    <%= f.label :price do %>
+      Price
+    <% end %>
+    <br />
+    <%= f.text_area :price, :class => "form-control" %>
   </div>
   <div class="field">
     <%= f.label :image do %>
